@@ -1,5 +1,10 @@
 2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
 	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
+	* man/xml-source/amanda-changers.7.xml,
+	  man/xml-source/amfetchdump.8.xml: Fix typo
+
+2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
+	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
 	* man/xml-source/amanda.conf.5.xml: Improve documentation
 
 2017-11-23  Jean-Louis Martineau <JMartineau@carbonite.com>
